working on opportunity list
Former-commit-id: a74683b663c43f4a9ff34bcb4e7e9f144bdf0d69 [formerly cafa399a6cdafad1748801a2e52c589667a16098] [formerly a7d2c1b7bddd97f224a5d40be009cc14b6341580 [formerly 3e72f9b690cde6452c025e7879ef792a586ae964]]
Former-commit-id: 4bcef1fcc5223cebb762dfd3d82cec26a07d7555 [formerly f109ca51ba29bfffc14c270f9f12bf7c6e094f77]
Former-commit-id: 9259eeb56a6053547269b8b9db939960df914266

--- a/templates/base.html
+++ b/templates/base.html
@@ -388,9 +388,9 @@
 <!-- async scripts-->
 <script type="text/javascript">
 
-// var ROOT = '/_ah/api';
+var ROOT = '/_ah/api';
 
- var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+ // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
     var apisToLoad;
     var callback = function() {
