working on opportunity list
Former-commit-id: 9c9ab2552ab3f3751c6366116658d5060f814754 [formerly 13f3cbc5a2233ecdd314de83f251b21dce7338d9] [formerly 92435f404446b616ecaaf768295baabbe4bdfad1 [formerly 0f637e2266f6c712e8947835d015beac9ba5c03a]]
Former-commit-id: 2a51e268ffdde44f4567dc650e66fa82694484ce [formerly e2462fcf5ca65ee0400d0e19257a0e4343728215]
Former-commit-id: 186c01581d86d4593715bbf25c3135873718532e

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -536,12 +536,12 @@
                  <li  ng-show="opportunity.account.name" style="  color: #169ef4 !important;" class="onelineItem">
                        <i class="fa  fa-building" title="Account name" style="font-size:11px"></i>
                        <span style="font-size: 11px;"><a  title="<%=opportunity.account.name%>" href="/#/accounts/show/<%=opportunity.account.id%>" style="  color: #169ef4 !important;"> <%=opportunity.account.name%> </a></span>
-                       <span style="font-size: 11px;"><a  title="<%=opportunity.account.name%>" href="/#/accounts/show/<%=opportunity.account.id%>" style="  color: #169ef4 !important;"> (boudjelthia ilyes) </a></span>   
+                       <span style="font-size: 11px;"><a  title="<%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%>" href="/#/accounts/show/<%=opportunity.contact.id%>" style="  color: #169ef4 !important;"> ( <%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%> ) </a></span>   
                        
                   </li>
                   <li   style="color: rgb(160, 158, 158);font-size:11px" class="onelineItem">
                        <i class="fa fa-clock-o"></i>   
-                       <a href="tel:<%=opportunity.phones.items[0].number%>"> 02-05-2015</a>
+                       <a> <%=opportunity.closed_date | date:'yyyy-MM-dd'%></a>
 
                   </li>
               </ul>
