fix bug in contact list ( deleting edge between contact and account )
Former-commit-id: 732c7de6d466776b1e7e0955519b5b16f3a1410c [formerly 57fa6807a7102b7ec9e07bc72ec2d306504a8fd9] [formerly 363e7dcd459f12e73c4fc9e4d52d93c349736792 [formerly 8f087676f9e05b26365aa3c2409114df792a2e2e]]
Former-commit-id: f650733b87a577c9d897d5c9268ad8d723b7be07 [formerly bc762b675a897b00e71de97271c7043f0f6591e8]
Former-commit-id: ad22ba63004f17446d929a3898761941e8e64105

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -458,7 +458,7 @@
                         </td>
                         <td style="word-wrap: break-word;max-width:200px">
                           <i class="fa fa-building" style="color: #169ef4 !important;" ng-show="contact.account.name"></i>
-                          <a ng-show="contact.account.name" title="<%=contact.account.name%>" href="/#/accounts/show/<%=contact.account.id%>" style="cursor:pointer">                 
+                          <a ng-show="account.name" title="<%=contact.account.name%>" href="/#/accounts/show/<%=contact.account.id%>" style="cursor:pointer">                 
                             <%= contact.account.name %>
                           </a>
                         </td>
