--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -536,7 +536,12 @@
                  <li  ng-show="opportunity.account.name" style="  color: #169ef4 !important;" class="onelineItem">
                        <i class="fa  fa-building" title="Account name" style="font-size:11px"></i>
                        <span style="font-size: 11px;"><a  title="<%=opportunity.account.name%>" href="/#/accounts/show/<%=opportunity.account.id%>" style="  color: #169ef4 !important;"> <%=opportunity.account.name%> </a></span>
-                       <span style="font-size: 11px;"><a  title="<%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%>" href="/#/accounts/show/<%=opportunity.contact.id%>" style="  color: #169ef4 !important;"> ( <%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%> ) </a></span>   
+                       <span style="font-size: 11px;"><a  title="<%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%>" href="/#/contacts/show/<%=opportunity.contact.id%>" style="  color: #169ef4 !important;"> ( <%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%> ) </a></span>   
+                       
+                  </li>
+                  <li  ng-show="opportunity.lead.id" style="  color: #169ef4 !important;" class="onelineItem">
+                       <i class="fa  fa-building" title="Lead name" style="font-size:11px"></i>
+                       <span style="font-size: 11px;"><a  title="<%=opportunity.lead.firstname%> <%=opportunity.lead.lastname%>" href="/#/leads/show/<%=opportunity.lead.id%>" style="  color: #169ef4 !important;"> <%=opportunity.lead.firstname%> <%=opportunity.lead.lastname%> </a></span>  
                        
                   </li>
                   <li   style="color: rgb(160, 158, 158);font-size:11px" class="onelineItem">
