--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -28,6 +28,8 @@
           </td>
       <td class="middleHeaderTd">
         <div class="subheadContient" style="padding-top: 5px;float: left;vertical-align: middle;">
+              <a ng-click="inFinalStages=false;" ng-show="inFinalStages" data-toggle="tooltip" data-placement="bottom" title="Back all  opportunities" style="float:left;cursor:pointer">
+                <img onload="this.__gwtLastUnhandledEvent = & quot; load & quot; ;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 23px; height: 17px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a> 
                <div class="customCheckbox customCheckboxOnHeader " style="display: inline-block; float: left;">  
                   <input ng-show="leads" title="Select lead" style="padding-top: 4px;" type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)" class="checkbox" id="leadCheckAll">
                   <label for="leadCheckAll" class="labelElement">
@@ -36,6 +38,7 @@
                   </label>  
               </div>
               <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">
+                <span ng-show="inFinalStages"><%= finalStageName %></span>
                 {{ _("Opportunities")}}
               </h2>
               <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
@@ -300,15 +303,16 @@
       <img alt="delete tag" droppable ng-drop="dropOutTag()" class="" src="/static/img/iotrash.png" >
     </div>
   </div>
-  <div class="otherStages">
+  <div class="otherStages" ng-hide="inFinalStages">
     <div class="page-content" style="margin-left: 190px;margin-top: 0px;background-color: inherit !important;border-left: none !important; padding-top: 8px !important;">
         <div class="row endStages listContainer" >
-          <div class="col-md-4" style="text-align:center"><span droppable class="btn red btn-lg" ng-click="updateStageOpps({stage:{name:'Close lost'}})" ng-drop="updateOpportunityStage({stage:{name:'Close lost'}})" style="line-height: 55px;
-  width: 230px;"><i class="fa fa fa-times" style="font-size: 19px;"></i> Lost</span></div>
-          <div class="col-md-4" style="text-align:center"><span  style="line-height: 55px;
-  width: 230px;" droppable ng-drop="editbeforedeleteselection()" class="btn btn-default btn-lg"><i class="fa fa-trash-o" style="font-size: 19px;" ></i> Delete</span></div>
-          <div class="col-md-4" style="text-align:center" ><span style="line-height: 55px;
-  width: 230px;" droppable ng-click="updateStageOpps({stage:{name:'Close won'}})" ng-drop="updateOpportunityStage({stage:{name:'Close won'}})" class="btn green btn-lg"><i class="fa fa-trophy" style="font-size: 19px;"></i> Won</span></div>
+          <div class="col-md-4" style="text-align:center"><span droppable class="btn red btn-lg" ng-click="updateStageOpps({stage:{name:'Close lost'}})" ng-drop="updateOpportunityStage({stage:{name:'Close lost'}})" style="line-height: 30px;
+  opacity: 0.8;"><i class="fa  fa-thumbs-down" style="font-size: 19px;"></i> Lost</span></div>
+          <div class="col-md-4 trashDiv" style="text-align:center">
+              <img  class="img-responsive" droppable ng-drop="editbeforedeleteselection()" src="/static/img/iotrash.png" style="margin: auto;height: 60px;width: 60px;margin-top: -6px;">
+          </div>
+          <div class="col-md-4" style="text-align:center" ><span style="line-height: 30px;
+  opacity: 0.8;  background: #28b779 !important;" droppable ng-click="updateStageOpps({stage:{name:'Close won'}})" ng-drop="updateOpportunityStage({stage:{name:'Close won'}})" class="btn green btn-lg"><i class="fa fa-trophy" style="font-size: 19px;"></i> Won</span></div>
         </div>
     </div>
   </div>
@@ -469,12 +473,15 @@
                 </div>
             </div>
         </div>
-      <div class="opportunitiesTable" style="margin-left: 15px;margin-right: 15px;height: calc(100vh - 223px);">
+      <div class="opportunitiesTable" ng-hide="inFinalStages" style="margin-left: 15px;margin-right: 15px;height: calc(100vh - 202px);">
       <table class="table" style="background: none;">
         <thead>
           <tr style="text-align: center;background: white;margin-right: -6px;">
-             <th ng-repeat='opportunitystage in opportunitiesbysatges|filter:isStage' style="width:258px;text-align: center;border: none;  border-right: 3px solid rgb(210, 210, 210);">
+             <th ng-repeat='opportunitystage in opportunitiesbysatges|filter:isStage' style="width:258px;text-align: center;border: none;  border-right: 3px solid rgb(210, 210, 210);position:relative">
+                  <i class="fa fa-angle-double-right" style="left: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
+                  <i class="fa fa-angle-double-right" style="right: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
                   <%=opportunitystage.stage.name %>
+                  
              </th>
           </tr>
       </thead>
@@ -565,7 +572,7 @@
     </tbody>
   </table>
 </div>
- <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" id="contactCardsContainer" style="display:none;min-height: 0px !important;margin-top: -12px;">
+ <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="inFinalStages" id="contactCardsContainer" style="display:none;min-height: 0px !important;margin-top: -12px;">
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
