fixing loader bugs on oportunities list
Former-commit-id: c55c749b6199b5f115db5304a9b91ad17b51541f [formerly 4513b1c2640640874e9ecea25243c0c6b53668cc] [formerly 817475630f1380c420ee5c144733fda2654f90e2 [formerly e637bcd46681f03f6f3a8513eb078b132a5c845d]]
Former-commit-id: bdc02e8f2811c1b06ebf4f70ee00f34392f98655 [formerly 9f2de3cfb612ed453336eb61ea6a2f6b1f6bfc17]
Former-commit-id: c1fa5ae12c8581a3eaf3789e41580c236bfe444d

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -478,8 +478,10 @@
         <thead>
           <tr style="text-align: center;background: white;margin-right: -6px;">
              <th ng-repeat='opportunitystage in opportunitiesbysatges|filter:isStage' style="width:258px;text-align: center;border: none;  border-right: 3px solid rgb(210, 210, 210);position:relative">
-                  <i class="fa fa-angle-double-right" style="left: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
-                  <i class="fa fa-angle-double-right" style="right: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
+                  <span ng-show="$index==0" class="" style="left: 4px;top: 5px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);border-left: 3px solid gray;height: 27px;"></span>
+                  <i ng-show="$index > 0" class="fa fa-angle-double-right" style="left: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
+                  <i ng-show="$index < opportunitiesbysatges.length-1" class="fa fa-angle-double-right" style="right: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
+                  <span class="" ng-show="$index==opportunitiesbysatges.length-1" style="right: 4px;top: 4px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);border-left: 3px solid gray;height: 28px;"></span>
                   <%=opportunitystage.stage.name %>
                   
              </th>
@@ -1088,7 +1090,8 @@
               <div class="modal-body">
                  <form id="seletesho" name="deletesho" class="form-horizontal">
                   <fieldset>
-
+                    
+                    <p ng-show="opportunityToChage">{{_("Are you sure you want to delete")}} :  <%=opportunityToChage.name %>  .</p>
                    <p ng-show="selectedCards.length > 1">{{_("Are you sure you want to delete")}} :  <%=selectedCards.length %> opportunities .</p>
                     <p ng-show="selectedCards.length==1">{{_("Are you sure you want to delete")}} :  <%=selectedCards[0].name %> .</p>
 
