--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -37,9 +37,9 @@
                     <span class="box"></span>
                   </label>  
               </div>
-              <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">
-                <span ng-show="inFinalStages"><%= finalStageName %></span>
+              <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">                
                 {{ _("Opportunities")}}
+                <span ng-show="inFinalStages"><%= finalStageName %></span>
               </h2>
               <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
                 <a class="headerBtn" title="Refresh" ng-click="runTheProcess();"> 
@@ -306,13 +306,13 @@
   <div class="otherStages" ng-hide="inFinalStages">
     <div class="page-content" style="margin-left: 190px;margin-top: 0px;background-color: inherit !important;border-left: none !important; padding-top: 8px !important;">
         <div class="row endStages listContainer" >
-          <div class="col-md-4" style="text-align:center"><span droppable class="btn red btn-lg" ng-click="updateStageOpps({stage:{name:'Close lost'}})" ng-drop="updateOpportunityStage({stage:{name:'Close lost'}})" style="line-height: 30px;
+          <div class="col-md-4" style="text-align:center"><span droppable class="btn red btn-lg" ng-click="updateStageOpps(closeloststage)" ng-drop="updateOpportunityStage(closeloststage)" style="line-height: 30px;
   opacity: 0.8;"><i class="fa  fa-thumbs-down" style="font-size: 19px;"></i> Lost</span></div>
           <div class="col-md-4 trashDiv" style="text-align:center">
               <img  class="img-responsive" droppable ng-drop="editbeforedeleteselection()" src="/static/img/iotrash.png" style="margin: auto;height: 60px;width: 60px;margin-top: -6px;">
           </div>
           <div class="col-md-4" style="text-align:center" ><span style="line-height: 30px;
-  opacity: 0.8;  background: #28b779 !important;" droppable ng-click="updateStageOpps({stage:{name:'Close won'}})" ng-drop="updateOpportunityStage({stage:{name:'Close won'}})" class="btn green btn-lg"><i class="fa fa-trophy" style="font-size: 19px;"></i> Won</span></div>
+  opacity: 0.8;  background: #28b779 !important;" droppable ng-click="updateStageOpps(closewonstage)" ng-drop="updateOpportunityStage(closewonstage)" class="btn green btn-lg"><i class="fa fa-trophy" style="font-size: 19px;"></i> Won</span></div>
         </div>
     </div>
   </div>
@@ -378,7 +378,7 @@
 <div class="row">
    <div class="tab-pane">
       <div class="row">
-        <div class="col-md-12" ng-show="show=='list'">
+        <div class="col-md-12" ng-show="inFinalStages">
             <div class="table-responsive showPage" ng-show="opportunities">
                 <table class="table contactstable">
                 <thead>
@@ -398,9 +398,7 @@
                         
 
                         <th style="text-align:center">                          
-                          <a href=""  ng-click="filterBy('stage')" > {{ _(' Stage')}}</a>
-                          <i class="fa fa-caret-up" ng-show="fltby == '-stage'"></i>
-                          <i class="fa fa-caret-down" ng-show="fltby == 'stage'"></i>
+                          <a href=""  ng-click="filterBy('last_stage.name')" > {{ _('Last Stage')}}</a>
                         </th>
                         <th>                          
                             <a href="" ng-click="filterBy('account.name')"> {{ _(' Related to')}}</a>
@@ -438,15 +436,16 @@
 
                         </td>
                         
-                        <td>
-                          <div easypiechart class="chart chartOnList" options="chartOptionsOnList" percent="opportunity.current_stage.probability"></div>
-                          <div class="stage">                            
+                        <td style="text-align:center">
+                          <span style=" font-size: 16px; text-align: center; "><%= opportunity.last_stage.name%></span>
+                          <!--<div easypiechart class="chart chartOnList" options="chartOptionsOnList" percent="opportunity.current_stage.probability"></div>
+                          <div class="oppStage">                            
                               <div style=" text-align: center;">
                                 <span style=" font-size: 16px; color: rgb(39, 153, 28); "><%=opportunity.current_stage.probability%> %</span>
                                 <span style=" font-size: 15px; "><%=opportunity.current_stage.name%></span>
                                 
                               </div>
-                           </div>
+                           </div>-->
                         </td>
                         <td style="word-wrap: break-word;max-width:200px">
                             <a href="/#/accounts/show/<%= opportunity.account.id %>" style=" font-size: 15px; font-weight: bold; ">
@@ -478,10 +477,10 @@
         <thead>
           <tr style="text-align: center;background: white;margin-right: -6px;">
              <th ng-repeat='opportunitystage in opportunitiesbysatges|filter:isStage' style="width:258px;text-align: center;border: none;  border-right: 3px solid rgb(210, 210, 210);position:relative">
-                  <span ng-show="$index==0" class="" style="left: 4px;top: 5px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);border-left: 3px solid gray;height: 27px;"></span>
+                  <span ng-show="$index==0" class="" style="left: 4px;top: 5px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);  border-left: 3px solid rgb(226, 226, 215);height: 27px;"></span>
                   <i ng-show="$index > 0" class="fa fa-angle-double-right" style="left: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
                   <i ng-show="$index < opportunitiesbysatges.length-1" class="fa fa-angle-double-right" style="right: 3px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);"></i>
-                  <span class="" ng-show="$index==opportunitiesbysatges.length-1" style="right: 4px;top: 4px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);border-left: 3px solid gray;height: 28px;"></span>
+                  <span class="" ng-show="$index==opportunitiesbysatges.length-1" style="right: 4px;top: 4px;font-size: 51px;    position: absolute;  color: rgb(226, 226, 215);  border-left: 3px solid rgb(226, 226, 215);height: 28px;"></span>
                   <%=opportunitystage.stage.name %>
                   
              </th>
@@ -574,7 +573,7 @@
     </tbody>
   </table>
 </div>
- <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="inFinalStages" id="contactCardsContainer" style="display:none;min-height: 0px !important;margin-top: -12px;">
+ <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="false" id="contactCardsContainer" style="display:none;min-height: 0px !important;margin-top: -12px;">
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
