finishing oppo show
Former-commit-id: 60198b0f493fdbf057788f53a0914a7693c40f29 [formerly dee343176e143168c3760008c4a0612c608826c8] [formerly 18cc55e08f794b55d413905d970af5747aad26da [formerly 7ca17d6dc0230bede162f7af5441af3328aae42d]]
Former-commit-id: 7f5a26c01e79081ccae09062c40ff93b9131f30c [formerly 7fe4583db41096f815c6066d390a0571225c9213]
Former-commit-id: 56a2f7ee5c88afc571bd2cb6460000928a7fc546

--- a/templates/base.html
+++ b/templates/base.html
@@ -391,14 +391,14 @@
 
 
 
-//var ROOT = '/_ah/api';
+var ROOT = '/_ah/api';
 
 
 
 
 
 
- var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -497,13 +497,16 @@ $(document).ready(function() {
     });
 });
  </script>
-
+<script type="text/javascript" src="/static/plugins/bootstrap-wizard/jquery.bootstrap.wizard.js" ></script>
 <script type="text/javascript" src="/static/build/js/sync_scripts.min.js" ></script>
 <!--<script type="text/javascript" src="https://storage.googleapis.com/iogrow-cdn/opt_files/async_scripts.min.js" async></script>
 <script src="/static/plugins/d3.min.js" async></script>
 <script src="/static/plugins/d3-funnel-charts.js" async></script>
 <script src="/static/plugins/ng-google-chart.js" async></script>-->
 <!--<script src="https://storage.googleapis.com/iogrow-cdn/opt_files/js/async_scripts_2.min.js" ></script>-->
+
+
+
 <script src="/static/build/js/async_scripts_2.js" ></script>
 <script type="text/javascript" src="/static/build/js/sync_ctrls_sers_scripts.js"></script>
 <!--<script type="text/javascript" src="/static/build/js/async_ctrls_sers_scripts.js" ></script>-->
