--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<!-- saved from url=(0029)https://www.google.com/drive/ -->
-<html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en">
-<script type="text/javascript">
-
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!DOCTYPE html><html class="google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang=en><head><meta http-equiv=Content-Type content="text/html; charset=UTF-8"><meta content="IE=edge" http-equiv=X-UA-Compatible><meta http-equiv=content-language content=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" name=viewport><meta name=description content="A smart social CRM for small businesses on Google. organize your sales process, Lead generation from Linkedin, Twitter and Gmail"><meta content="ioGrow - A smart social CRM for small businesses on Google" property=og:title><meta content=http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png property=og:image><meta content="Lead generation and sales process organization" property=og:description><title>A smart Social CRM for small business on Google, leads from linkedIn | ioGrow</title><link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel=stylesheet><link href=http://storage.googleapis.com/iogrow-cdn/opt_files/welcome_files/maia.experimental.css.gz rel=stylesheet><link href="/static/new_web_site/google_drive_files/site.min.css" rel=stylesheet><script  src=http://storage.googleapis.com/iogrow-cdn/opt_files/welcome_files/modernizr.js.gz></script><link href=http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico rel="shortcut icon"><style type=text/css>.cta-home{margin-top: 10px !important;}.black-h2{font-size:20px; color:black;} .black-h1{color:black;} .heading{font-size:48px}.section-download .one-whole img,.section-intro .one-whole img{height:75px;margin:0 auto 20px auto}.try-iogrow{padding-left:50px;padding-right:50px}.google-signin{padding-top:15px}.together{font-size:47px}.hr-style{width:200px;height:2px;border:0;border-top:1px solid #0d0641}.same-color{color:#0d0641;font-weight:700}.video-webm{width:100%;text-align:center}.center-headlines{margin-top: -185px !important;opacity: 1;position: absolute;top: 233px;left: 16%;}</style><script type=text/javascript>!function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://plus.google.com/js/client:plusone.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script><script type=text/javascript>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -18,74 +13,7 @@ if (window.location.host != "localhost")
         ga('create', 'UA-52188380-1', 'auto');
         ga('send', 'pageview');
   {% endif %}
-}
-
-
-</script>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta http-equiv="content-language" content="en">
-    <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta name="description" content="A simple social CRM for small businesses on Google. organize your sales process, Lead generation from Linkedin, Twitter and Gmail" >
-
-    <meta content="ioGrow - A simple social CRM for small businesses on Google" property="og:title">
-    <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
-    <meta content="Lead generation and sales process organization" property="og:description">
-    <title>A simple Social CRM for small business on Google, leads from linkedIn | ioGrow</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
-    <link href="https://s3-us-west-2.amazonaws.com/iogrow-cdn/site.min.css.gz" rel="stylesheet">
-    <script async src="http://storage.googleapis.com/iogrow-cdn/opt_files/welcome_files/modernizr.js.gz">
-</script>
-    <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
-    <style type="text/css">
-    .heading{
-      font-size: 48px;
-    }
-    .section-intro .one-whole img, .section-download .one-whole img {
-      height: 125px;
-      margin: 0 auto 20px auto;
-      }
-    .try-iogrow{
-      padding-left: 50px;
-      padding-right: 50px;
-    }
-    .google-signin{
-      padding-top: 15px;
-    }
-    .together{
-      font-size: 47px;
-    }
-    .hr-style{
-      width: 200px; height: 2px;
-    border: 0; border-top: 1px solid rgb(13, 6, 65);
-    }
-    .same-color{
-      color:rgb(13, 6, 65);
-      font-weight: bold;
-    }
-    .video-webm{
-      width: 100%;
-      text-align: center;
-    }
-    
-    </style>
-    <!-- Google Analytics -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script');
-    po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://plus.google.com/js/client:plusone.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(po, s);
-  })();
-  </script>
-
-<!-- End Google Analytics -->
-
-
-  </head>
+}</script></head>
   <body class="index nav-light">
     <header class="header" role="banner">
       <div class="header-item with-site-logo">
@@ -115,45 +43,21 @@ if (window.location.host != "localhost")
       </div>
     </header>
     <section class="section-intro section-panel-fullscreen js-fullscreen" style="height: 682px; opacity: 1;">
-      <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="http://storage.googleapis.com/iogrow-cdn/opt_files/intro.jpg" style="height: 882px; background-image: url(http://storage.googleapis.com/iogrow-cdn/opt_files/intro-1600.jpg);"></div>
-      <div class="section-centered section-vertical-align js-vertical-align js-parallax-image" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -165px; opacity: 1;">
+      <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="/static/img/desktop_bg.png" style="height: 882px; background-image: url(/static/img/desktop_bg.png);"></div>
+      <div class="section-centered section-vertical-align js-vertical-align js-parallax-image center-headlines" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -212px; opacity: 1;">
         <div class="one-whole">
-          <img alt="Drive logo logo-heading" title="ioGrow" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
-          <h1 class="section-headline section-headline-large section-headline-white heading together">
-           A simple social CRM for small businesses on Google
+          <img alt="Drive logo logo-heading" title="ioGrow" src="http://storage.googleapis.com/iogrow-cdn/Linkedin---Salesforce-icon.png" height="50">
+          <h1 class="section-headline section-headline-large section-headline-white heading together black-h1">
+           The productivity tool for Social Selling
           </h1>
+          <h2 class="black-h2">
+           Save the right prospects from LinkedIn to Salesforce CRM
+          </h2>
+          <a class="maia-button button-download download-mobile get-started cta-home" href="https://chrome.google.com/webstore/detail/linkedin-to-salesforce/gbenffkgdeokfgjbbjibklflbaeelinh?urp=http%3A%2F%2Fwww.lilead.com%2F" style="display: inline-block;" target="_blank">
+            Add lilead to LinkedIn</a>
 
-          <div class="google-signin">
-          {%if user %}
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-callback="onSignInCallback"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall"
-                              >
-                        </button>
-                        {%else%}
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-callback="onSignInCallback"
-                              data-accesstype="offline"
-                              data-approvalprompt="force"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall">
-                        </button>
-                        {%endif%}
-          </div>
-          <hr class="hr-style" />
-          <h2 class="same-color">Lead generation and sales process organization</h2>
-          <h3 class="same-color">Get users and customers from LinkedIn, Twitter and Gmail</h3>
+          
+          
           <div class="mobile-is-visible mobile-button-selector">
             <a class="maia-button button-download download-mobile get-started try-iogrow" href="/sign-in" style="display: inline-block;">
             Try ioGrow</a>
