--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -317,28 +317,31 @@
                                       <div class="clearfix"></div>
                               </div>
                                <div class="news-blocks blank-card blank-card-yellow ">
-                                                    <h3 style="margin-top:0px; margin-bottom: 20px;">
-                                                      <i class="fa fa-edit" style="  font-size: 24px;"></i>{{_(' Notes')}}
-                                                     </h3>
-                                                    <div class="news-block-tags">
-                                                       <ul class="chats">
-                                                        <li class="in" ng-repeat="note in account.notes" id="topic_<%=$index%>">
-                                                            <img class="avatar" alt="" ng-src="{{user.google_public_profile_photo_url}}" />
-                                                            <div class="message">
-                                                                <span class="arrow"></span>
-                                                                <a href="#" class="name">
-                                                                    {{user.google_display_name}}
-                                                                </a>
-                                                                <span class="datetime">
-                                                                    at <%= CurrentDate | date:'MM-dd-yyyy - HH:mm:ss '  %>
-                                                                </span>
-                                                                <span class="body">
-                                                                    <a href="<%=getTopicUrl(note.topic_kind,note.id)%>" class="discussion-content"><strong class="ng-binding">
-                                                                            <a href="#/notes/show/<%= note.id%>"><%= note.title%></a> </strong> - <span class="excerpt ng-binding" ng-bind-html-unsafe="note.excerpt"></span><span class="chat-meta pull-right" ng-show="note.content"><i class="icon-comment"></i> <a href="#/notes/show/<%= note.id%>"> <%= note.content%> </a> {{_('content')}}</span>
-                                                                    </a>
-                                                                </span>
-                                                            </div>
-                                                        </li>
+                                        <h3 style="margin-top:0px; margin-bottom: 20px;">
+                                          <i class="fa fa-edit" style="  font-size: 24px;"></i>{{_(' Notes')}}
+                                         </h3>
+                                        <div class="news-block-tags">
+                                           <ul class="chats">
+                                            <li class="in" ng-repeat="note in notes" id="topic_<%=$index%>">
+                                                <img class="avatar" alt="" ng-src="{{user.google_public_profile_photo_url}}" />
+                                                <div class="message">
+                                                    <span class="arrow"></span>
+                                                    <a href="#" class="name">
+                                                        {{user.google_display_name}}
+                                                    </a>
+                                                 <!--    <span class="datetime">
+                                                        at <%= CurrentDate | date:'MM-dd-yyyy - HH:mm:ss '  %>
+                                                    </span> -->
+                                                    <span class="body">
+                                                      <strong style="color: #2D85B5;" class="ng-binding">
+                                                        <%= note.title%> 
+                                                      </strong> - 
+                                                      <span class="excerpt ng-binding" ng-bind-html-unsafe="note.excerpt"></span>
+                                                      <span class="chat-meta" ng-show="note.content"><i class="icon-comment"></i>  <%= note.content%>  </span>
+                                                       
+                                                    </span>
+                                                </div>
+                                            </li>
                                                     </ul>
                                                         <div class="row">
                                                         <div class="col-md-12  margin-bottom-10">
@@ -359,7 +362,7 @@
                                                                     <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="newnote.content" placeholder="{{_('Note ...')}}"></textarea>
                                                                 </div>
                                                                 <div class="pull-right">
-                                                                    <input ng-disabled="isLoading || !note.title" ng-click="addNote(newnote)"  type="submit" class="btn blue" value="{{_('Add this note')}}">
+                                                                    <input ng-disabled="!newnote.title" ng-click="addNote(newnote)"  type="submit" class="btn blue" value="{{_('Add this note')}}">
                                                                 </div>
                                                             </form>
                                                         </div>
