fix try except on put_index
Former-commit-id: bbb4065131f4a0705c39e16da6cbd95ed902a093 [formerly 4ee3e083de5e0a6006a4ccc3d4a73efdc5d36083] [formerly 9c7c8fbc434fa4da3e6646a17cc0aaf8f8e779cb [formerly 5b71051a6274579635b2c3e455d8a26996a2181a]]
Former-commit-id: 020d300d578b35114a436435cfcad92cfcafc283 [formerly 1d59069caded82abb7ea3e7e5a062e6e832e7017]
Former-commit-id: 70e07ffac2b94fd005b961c043405770b33cd92c

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -2186,18 +2186,20 @@ function wizz(){
                 $('#form_wizard_1 .button-submit').click(function () {}).hide();
 }
 function waitwizard() {
-      if (angular.element("#signin").scope().opportunity==undefined) {
-          setTimeout("waitwizard()", 500);
-      }else{;
-          if(angular.element("#signin").scope().opportunity.id!=undefined) {
-                 wizz()// you will need an asynch callback
-          } else {
-            console.log("not yet")
-            setTimeout("waitwizard()", 500); // poll in a half second
-          }
-    }
+     if (angular.element("#signin").scope().opportunity==undefined||jQuery.isEmptyObject(angular.element("#signin").scope().insideStages)) {
+         setTimeout("waitwizard()", 500);
+     }else{;
+         if(angular.element("#signin").scope().opportunity.id!=undefined&&!jQuery.isEmptyObject(angular.element("#signin").scope().insideStages)) {
+                wizz()// you will need an asynch callback
+         } else {
+           console.log("not yet")
+           setTimeout("waitwizard()", 500); // poll in a half second
+         }
+   }
 
 }
+
+
   $(function() {
    waitwizard();
     $('#datetimepicker2').datetimepicker({
