--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -158,9 +158,10 @@
               <div class="col-md-9 col-sm-9 col-xs-9" style="min-height: 113px;display: table; padding-left:0px;padding-right: 0px;">
                   <h3 style="margin-top: 0px;  margin-bottom: 5px;"> 
                     <span ng-hide="showEdit"><%= opportunity.name%></span>
-                    <form ng-show="showEdit" class="form-inline newLeadForm" role="form" style="  margin-right: 2px;display: inline-block;float: left;margin-bottom: 0px;width: calc(100% - 145px);">
+                    <form ng-show="showEdit" class="form-inline newLeadForm" role="form" style="  margin-right: 2px;display: inline-block;float: left;margin-bottom: 0px;width: calc(100% - 176px);">
                         <div class="input-icon">
-                             <input class="  form-control address-input" type="text" placeholder="Account name" style="padding-top: 0px;padding-bottom: 0px;height: 30px;border: none;padding-left: 0px !important; padding-right: 0px;font-weight: 300!important;  font-size: 24px;" ng-model="opportunity.name" ng-blur="updateOppName(opportunity.name)" ng-enter="updateOppName(opportunity.name)">
+                              <i class="fa fa-pencil"></i>
+                             <input class="  form-control" type="text" placeholder="Account name" ng-model="opportunity.name" ng-blur="updateOppName(opportunity.name)" ng-enter="updateOppName(opportunity.name)">
                         </div>
 
                     </form> 
@@ -182,8 +183,20 @@
                   </div>
                   <div class="clearfix"></div>
                   </h3>  
-                  <p ng-show="opportunity.accounts[0].id"><a href="/#/accounts/show/<%=opportunity.accounts[0].id%>" style="font-size: 14px; font-weight: 700;  margin-bottom: 5px;"><%=opportunity.accounts[0].name%></a> ( <a href="/#/contacts/show/<%=opportunity.contacts[0].id%>" style="font-size: 14px;"><%=opportunity.contacts[0].firstname%> <%=opportunity.contacts[0].lastname %></a> ) </p>
-                  <p style="font-size: 20px;color: rgb(216, 74, 56);padding-right: 15px;  margin-bottom: 5px;">
+                  <p ng-show="opportunity.accounts[0].id">
+                          <a ng-hide="showEdit" href="/#/accounts/show/<%=opportunity.accounts[0].id%>" style="font-size: 14px; font-weight: 700;  margin-bottom: 5px;"><%=opportunity.accounts[0].name%></a>
+                          <div class="input-icon" ng-show="showEdit">
+                          <i class="fa fa-building"></i>
+                          <input type="text" required  ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}">
+                          </div>
+                           
+                           <a ng-hide="showEdit" href="/#/contacts/show/<%=opportunity.contacts[0].id%>" style="font-size: 14px;">(  <%=opportunity.contacts[0].firstname%> <%=opportunity.contacts[0].lastname %> ) </a>  
+                          <div class="input-icon" ng-show="showEdit" style="margin-top:10px">
+                          <i class="fa fa-user"></i>
+                          <input type="text" required ng-model="searchContactQuery" typeahead="contactResult as contactResult.firstname + ' '+  contactResult.lastname for contactResult in contactsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" class="form-control" placeholder="{{_('Contact')}}">
+                          </div>
+                  </p>
+                  <p ng-hide="showEdit" style="font-size: 20px;color: rgb(216, 74, 56);padding-right: 15px;  margin-bottom: 5px;">
                       <span>
                           <%= opportunity.currency %>
                       </span>
@@ -192,7 +205,7 @@
                       </span>
                       
                   </p>
-                  <div class="form-group currencyForm" ng-show="showEdit" style="padding-left:0px">
+                  <div  style="padding-right: 0px;  margin-bottom: 0px !important;" class="form-group currencyForm" ng-show="showEdit">
                     <div class="col-md-3 margin-bottom-10" style="padding-left:0px">
                         <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit ">
                      </div>
@@ -297,6 +310,7 @@
                          Close date :
                           <%=opportunity.closed_date | date:'yyyy-MM-dd - HH:mm:ss '%></span>
                       </span> 
+                  </p>
                       <div ng-show="showEdit" class="input-icon col-md-6" style="padding-left:0px">
                          <i class="fa fa-calendar"></i>
                          <input cdatetimepicker data-model="opportunity.closed_date" type="text" class="form-control" placeholder="{{ _('Click to change the estimated date')}}" value="" id="leadEventStartsAt">
@@ -304,7 +318,7 @@
                       <span  class="margin-bottom-15">
                                 <datetimepick ng-model='opportunity.closed_date'  label-format='EEEE, MMMM d, yyyy'></datetimepick>
                       </span>                
-                  </p>
+                  
                   <p ng-show="opportunity.current_stage.probability=='100'" style="font-size: 21px;font-weight: 500; color: rgb(40, 183, 121);"> 
                     <i class="fa  fa fa-trophy" style="font-size: 21px;"></i> Congratulation, Opportunity Won !
                   </p>
@@ -2186,10 +2200,10 @@ function wizz(){
                 $('#form_wizard_1 .button-submit').click(function () {}).hide();
 }
 function waitwizard() {
-      if (angular.element("#signin").scope().opportunity==undefined) {
+      if (angular.element("#signin").scope().opportunity==undefined||jQuery.isEmptyObject(angular.element("#signin").scope().insideStages)) {
           setTimeout("waitwizard()", 500);
       }else{;
-          if(angular.element("#signin").scope().opportunity.id!=undefined) {
+          if(angular.element("#signin").scope().opportunity.id!=undefined&&!jQuery.isEmptyObject(angular.element("#signin").scope().insideStages)) {
                  wizz()// you will need an asynch callback
           } else {
             console.log("not yet")
