Error when change the language of the user is fixed and remove the Gmail SynchronizationGmail Synchronization tab
Former-commit-id: 70c292df8fbd746d86e30be83c7d0eea4187031c [formerly 769332b0efcbf97877e2e2e61ebb9ed00e05c445] [formerly 980e1fb2476a9635f2c79c594cbc1b033e941a81 [formerly 8d256bd6451aed14767bed3e0a3979521a7354e2]]
Former-commit-id: 5a953cd62014a8b9198452860a4a3fc47b7bb6fe [formerly 33352d257d7f3f64111179965c53da37d65cf77b]
Former-commit-id: e76f89923652a0715b5cc50a2a818de37fb6a2fe

--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -79,9 +79,9 @@
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==6}">
                     <a ng-click="waterfall(); selectedTab =6;">{{ _('Language')}}</a>
                   </li>
-                  <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==7}">
+                <!--   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==7}">
                     <a ng-click="waterfall(); selectedTab =7;">{{ _('Gmail Synchronization')}}</a>
-                  </li>
+                  </li> -->
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==8}">
                     <a ng-click="waterfall(); selectedTab =8;">{{ _('TimeZone')}}</a>
                   </li>
@@ -305,7 +305,7 @@
   </div>
 <!-- end language tab -->  
 
-<div class="tab-pane active" id="tab_1_6" ng-show="selectedTab == 7" style="display: none;">
+<!-- <div class="tab-pane active" id="tab_1_6" ng-show="selectedTab == 7" style="display: none;">
     <div class="row cards-container" style="
     background-color: white;
     margin-right: -2px !important; 
@@ -328,13 +328,13 @@
                 </div>
               </form>
               </div>
-<!--           <div class="modal-footer">
+           <div class="modal-footer">
             <button  type="submit"  ng-click="updateGmailSync()" class="btn btn-primary addContactNow">{{_("Save")}} </button>
           </div>
- -->        </div>
+        </div>
       </div>
-    </div><!--/inner-cards-container-->
-  </div>
+    </div>
+  </div> -->
 <!-- end language tab -->
 
 <!-- tab timezone -->
