remove coupon from sign-up
Former-commit-id: 46451cfee19629c1c474f5627f574bd1aaa93d38 [formerly af1961511c7257240c1d91b7e5235551ba33885f] [formerly c7313fc3aa7c7301d0d9a270c28d0568836c7433 [formerly 951dbe14f82fe649d6f1a4bc756bc64d6dcf16db]]
Former-commit-id: a4971cb0c432fe618190be201e27cd0ffe946639 [formerly d1b5e64e58d6354431324c9deed12ef24d8e59a2]
Former-commit-id: 1caad0566e9e334b730d2675a269436ac9859f4b

--- a/templates/new_web_site/sign-up.html
+++ b/templates/new_web_site/sign-up.html
@@ -80,7 +80,7 @@ window._fbq.push(['track', '6026368632186', {'value':'0.01','currency':'USD'}]);
             <form class="sign-up-form" action="" method="POST">
 
                           <input required autofocus type="text" name="org_name" placeholder="Type here your organization name"  width="150%">
-                          <input  autofocus type="text" name="promo_code" placeholder="Promotion code"  width="150%">
+                          <!-- <input  autofocus type="text" name="promo_code" placeholder="Promotion code"  width="150%"> -->
 
                          <!--  <input required autofocus type="text" name="tags" placeholder="Describe your business: #topic1, #topic2" > -->
 
