fix #2030 settings currency and currency format for user
Former-commit-id: 8d0e6f4416a794caacac785ba2791da7798dd210 [formerly da8872a6feff4b150bd67ee88f13edfc922bf39e] [formerly f8ce784b5aea7d68f054b8e2ad8ba65666f2f31f [formerly f8bfbb7fceb021a33a242c97acf4917690bac560]]
Former-commit-id: 26ee147f41ca5a1a13a4a16778b3343d2b2d4fb3 [formerly 8cb1b1d2b30eceace1de2e6ca3512d3bdf725d4e]
Former-commit-id: 47b97584d17d367eb044041d687179d3524a7cfa

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -188,7 +188,7 @@
                           <%= opportunity.currency %>
                       </span>
                       <span>
-                          <%= opportunity.amount_total %>
+                          <%= opportunity.amount_total | curr:'{{length_decimal}}':'{{length_whole_part}}':"{{sections_delimiter}}":"{{decimal_delimiter}}"%>
                       </span>
                       
                   </p>
