--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -528,7 +528,7 @@
                   </div>
                   <div class="name">
                     <p style="color: #d12610; text-align: center;margin-bottom: 0px;">
-                      <span style=" font-size: 16px; text-align: center; "><%= opportunity.currency %> <%= opportunity.amount_per_unit | curr:'2':'3':".":","%></span>
+                      <span style=" font-size: 16px; text-align: center; "><%= opportunity.currency %> <%= opportunity.amount_total | curr:'{{length_decimal}}':'{{length_whole_part}}':"{{sections_delimiter}}":"{{decimal_delimiter}}"%></span>
                     </p>
                    <!-- <p>
                      <span style=" color: rgb(156, 156, 156); font-size: 13px; " class="amount-details" ng-show="opportunity.duration_unit!='fixed'">
