Change the behaviour of adding custom field, fix #2081
Former-commit-id: 1c3edf15486befc932f8b8b02961a046f910a584 [formerly 96ab640ea55505371d95c901dceb7d7f480643ce] [formerly 3b40c6e3ba53e70aaaa616d52c5c4cfe3743ae08 [formerly 24b2ec9305cc5b94b63c68cbdedee024ad30f8d0]]
Former-commit-id: 59c458c041c4b7a160d63f9d724f22944695dccf [formerly d47ad1288b90ea1d249b3740ce2157be4836e6d2]
Former-commit-id: 1725891693b7bcc74282be86e5db15e217aea41c

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -856,7 +856,7 @@
                         <div class="news-blocks blank-card blank-card-gray newsCard">
                           <span class="page-meta pull-right">
                               <button type="button" ng-click="showEditCustomFields=false" ng-show="showEditCustomFields" class="btn red btn-sm pull-right btn-inline">Save</button>
-                              <a ng-click="showEditCustomFields=true" ng-hide="showEditCustomFields" class="btn-link addAnotherPhone" data-toggle="modal"><i class="fa fa-pencil"></i> Edit </a> 
+                              <a ng-click="showEditCustomFields=true" ng-hide="showEditCustomFields" class="btn-link addAnotherPhone" data-toggle="modal"><i class="fa fa-pencil"></i> {{_('Add')}} </a> 
                           </span>
                           <h3>{{_('Custom Fields')}}</h3>
                           <ul class="list-unstyled contact-infos showList">   
