adding time scale popup
Former-commit-id: 07bcc79e3c8cf9b264d527e12328a2a84c586f89 [formerly 0b7aadc989f2a8bb1d81333ab36a1d7742be1b54] [formerly 8809f3ae0aa83a289852dcc0e7a26b3127e2e488 [formerly df872d9cc383ef92a01d6a446557328a5084735f]]
Former-commit-id: 49f02e4b01c651d84a114dae0e6cd1783bb5bdce [formerly 0b6b61f706c95b6ad1e62078e4e0b8da03d6245e]
Former-commit-id: 381f3552713eb642a81556b6f1abafc1bdbf2de9

--- a/templates/base.html
+++ b/templates/base.html
@@ -390,7 +390,7 @@
 <script type="text/javascript">
 
 
-    var ROOT = '/_ah/api';
+    // var ROOT = '/_ah/api';
 
 
 
@@ -398,7 +398,7 @@
 
 
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
