add twitter to related contact on account show
Former-commit-id: bc47ccce4a19b42b2957d3a562688be2be92245d [formerly 1ff97ee9804ca985356e86d82bee2b72839f266b] [formerly 016b1f46c029ea13cc84fe23a96d902a2cd1d8e7 [formerly 458286c4f4581977536931c2abe8d49c3a526e57]]
Former-commit-id: fedaccbc4bb5af4396c1ceab43f70d6deb28a83d [formerly 69978727a6379f1848b7bd5c0df4a0c5c2c5a731]
Former-commit-id: 102394749128ce27c4525189e5c581b19116ee4d

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -487,7 +487,9 @@
                   </div>
                                   <div class="customField news-blocks blank-card blank-card-gray">
 
-                               <h3>{{ _('Custom Fields') }}</h3>
+                               <h3>
+                                <i class="fa fa-cogs" style="font-size: 24px;"></i>
+                                {{ _('Custom Fields') }}</h3>
 
                               
                                 <ul class="list-unstyled contact-infos showList" >
@@ -569,7 +571,7 @@
                                           </div>
                                   </div>
                                  
-                                  <a href="" ng-click="newRelatedContact=true"> <i class="fa fa-minus-square" ng-show="newRelatedContact"></i> <i ng-hide="newRelatedContact" class="fa fa-plus-square"></i>   Or add a new contact</a>
+                                  <a href="" ng-click="newRelatedContact=true" style="color: rgb(209, 38, 16);"> <i class="fa fa-minus-square" ng-show="newRelatedContact"></i> <i ng-hide="newRelatedContact" class="fa fa-plus-square"></i>   <i class="fa fa-user"></i>   Or add a new contact</a>
                                   <form class=" relatedNewForm slimForm ng-pristine ng-invalid ng-invalid-required" ng-show="newRelatedContact">
                                     <div class="formElements">
                                         <div class="row">
@@ -889,7 +891,7 @@
                         </div>
                       </div>
                     </div>
-                              <div class="col-md-12">
+                    <div class="col-md-12">
                       <!-- BEGIN PORTLET -->
                        <div class="portlet showPage rightCardContent" ng-show="twList.length > 0||twIsSearching">
                         <div class="portlet-title line">
