fixing bug on opp list displaying account , contact, or lead details
Former-commit-id: 5fe1026da453c3308882b25ba476784edce9684d [formerly a6076c628768edb1b2664421f40f343722b7ba7c] [formerly 504c79cf6456c94aea9886d778e3f08325505f8b [formerly 06162e8b7cfef2d71607519f3a562f00d880dca9]]
Former-commit-id: 7020044c0931ba428cf033d0eae5f07895e0ba52 [formerly 49e7fb55174ad751abce361c99684b694c1716d0]
Former-commit-id: 4ba1dba70e90336a16a186b56ee9f1579409a6fe

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -544,10 +544,16 @@
                 <div class="clearfix"></div>
               </div>
               <ul class="details list-group" style="margin-bottom:4px">
-                 <li  ng-show="opportunity.account.name" style="  color: #169ef4 !important;" class="onelineItem">
-                       <i class="fa  fa-building" title="Account name" style="font-size:11px"></i>
+                 <li  ng-show="opportunity.account||opportunity.contact" style="  color: #169ef4 !important;" class="onelineItem">
+                       <i ng-show="opportunity.account" class="fa  fa-building" title="Account name" style="font-size:11px"></i>
                        <span style="font-size: 11px;"><a  title="<%=opportunity.account.name%>" href="/#/accounts/show/<%=opportunity.account.id%>" style="  color: #169ef4 !important;"> <%=opportunity.account.name%> </a></span>
-                       <span style="font-size: 11px;"><a  title="<%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%>" href="/#/contacts/show/<%=opportunity.contact.id%>" style="  color: #169ef4 !important;"> ( <%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%> ) </a></span>   
+                       <span ng-show="opportunity.contact" style="font-size: 11px;">
+                          <a  title="<%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%>" href="/#/contacts/show/<%=opportunity.contact.id%>" style="  color: #169ef4 !important;"> 
+                           <span ng-show="opportunity.account">(</span>
+                              <%=opportunity.contact.firstname%> <%=opportunity.contact.lastname%> 
+                           <span ng-show="opportunity.account">)</span> 
+                         </a>
+                       </span>   
                        
                   </li>
                   <li  ng-show="opportunity.lead.id" style="  color: #169ef4 !important;" class="onelineItem">
