fixing a bug on lead_show custom fields
Former-commit-id: af12a41c8abc80b45e11fc7f2b5bc96d9bf682e9 [formerly d5eb8cde7d54c2a2207538d639fa5d9e254d2e12] [formerly 9ca5887ad280d5f5c9f15e19c55bc3a6e191913c [formerly e760d2b241bc2295cb1ffd538e975c34f349244f]]
Former-commit-id: 127b51692786d3d6e2e4a9d889b28c755d7a2b37 [formerly 0f38870718fceeee40ed740c1cb21408237ae6e4]
Former-commit-id: 7f5bd86ee503cb72ed833bd42aa453cd1786f902

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1132,17 +1132,17 @@
                                                 </span>
 
                                     <h3 style="margin-top:0px">{{ _('Custom Fields') }}</h3>
-                                    <ul class="list-unstyled contact-infos showList">
+                                    <ul class="list-unstyled contact-infos showList" ng-repeat="custom in infonodes.customfields">
 
-                                        <li ng-repeat="custom in infonodes.customfields">
+                                        <li ng-repeat="row in custom.fields" ng-show="row.value">
 
                                             <form editable-form name="editableCustomFieldForm"
-                                                  onbeforesave="inlinePatch('Infonode','customfields', custom.fields[0].field,custom.entityKey,custom.fields[0].value)"
+                                                  onbeforesave="inlinePatch('Infonode','customfields', row.field,custom.entityKey,row.value)"
                                                   class="customFieldForm">
                                                 <i class="fa fa-gear" ng-hide="editableCustomFieldForm.$visible"></i>
-                                                            <span editable-text="custom.fields[0].field" e-name="field">
-                                                                <%= custom.fields[0].field%>  : </span>
-                                                <span e-name="value" editable-text="custom.fields[0].value">   <%= custom.fields[0].value%> </span>
+                                                            <span editable-text="row.field" e-name="field">
+                                                                <%= row.field%>  : </span>
+                                                <span e-name="value" editable-text="row.value">   <%= row.value%> </span>
                                                             <span class="page-meta ng-scope"
                                                                   ng-hide="editableCustomFieldForm.$visible">
                                                                 <a ng-click="editableCustomFieldForm.$show()"
