--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -528,7 +528,7 @@
                                                 <div class="cont">
                                                     <a onclick="window.open('<%=prepareUrl(sociallink.url)%>','winname','width=700,height=550')"
                                                        style="display: inline-block;   float: left;"><img width="28"
-                                                                                                          src="/static/img/social_icons/<%=urlSource(sociallink.url)%>.png"></a>
+                                                                                                          ng-src="/static/img/social_icons/<%=urlSource(sociallink.url)%>.png"></a>
                                             <span onclick="window.open('<%=prepareUrl(sociallink.url)%>','winname','width=700,height=550')"
                                                   title="<%= sociallink.url%>"
                                                   style="line-height: 25px;font-size: 15px;padding-left: 20px; display: inline-block; float: left; cursor:pointer">
@@ -545,7 +545,7 @@
                                             <div class="cont">
                                                 <a onclick="window.open('<%=prepareUrl(sociallink.url)%>','winname','width=700,height=550')"
                                                    style="display: inline-block;   float: left;"><img width="28"
-                                                                                                      src="/static/img/social_icons/<%=urlSource(sociallink.url)%>.png"></a>
+                                                                                                      ng-src="/static/img/social_icons/<%=urlSource(sociallink.url)%>.png"></a>
                                                 <input ng-enter="pushElement(sociallink,sociallinks,'sociallinks')"
                                                        ng-blur="pushElement(sociallink,sociallinks,'sociallinks')"
                                                        ng-model="sociallink.url" placeholder="Add a social link"
@@ -732,7 +732,7 @@
                             <div ng-repeat="inShortProfile in inShortProfiles" style="margin-bottom:10px"
                                  ng-show="!isEmpty(inShortProfile)&&isEmpty(inProfile)">
                                 <div style="display: inline-block;float: left;" class="profile-photo-linkedin">
-                                    <img src="<%=inShortProfile.logo || '/static/img/avatar_contact.jpg'%>"
+                                    <img ng-src="<%=inShortProfile.logo || '/static/img/avatar_contact.jpg'%>"
                                          style="width: 90px;height: 90px;">
 
                                 </div>
@@ -857,7 +857,7 @@
                                     <div ng-repeat="worker in inProfile.workers" style="margin-bottom:10px"
                                          ng-hide="isEmpty(worker)">
                                         <div style="display: inline-block;float: left;" class="profile-photo-linkedin">
-                                            <img src="<%=worker.img || '/static/img/avatar_contact.jpg'%>"
+                                            <img ng-src="<%=worker.img || '/static/img/avatar_contact.jpg'%>"
                                                  style="width: 90px;height: 90px;">
 
                                         </div>
@@ -954,7 +954,7 @@
                             <div ng-repeat="twShortProfile in twShortProfiles" style="margin-bottom:10px"
                                  ng-hide="isEmpty(twShortProfile)">
                                 <div style="display: inline-block;float: left;" class="profile-photo-linkedin">
-                                    <img src="<%=twShortProfile.profile_image_url_https || '/static/img/avatar_contact.jpg'%>"
+                                    <img ng-src="<%=twShortProfile.profile_image_url_https || '/static/img/avatar_contact.jpg'%>"
                                          style="width: 90px;height: 90px;">
 
                                 </div>
