adding google user id on intercom properties
Former-commit-id: 76acde28c4121d926de0c753c3499ff0aea809cf [formerly e826c932b94d7db371f256e604e752731598f1b8] [formerly 648e6197bb8e3196ea78bd096fdee9820a8cecda [formerly d81a2bc71c6c96f2c4c1bf04a2b9dd01ff02acc4]]
Former-commit-id: 6bcda7cbfc30ad3ef184f87cd18eea6c2deac059 [formerly 052521df4200e1106cc76ada8b0ce9bf3452b221]
Former-commit-id: 25015bc259d347d363b6693dffa2c3c00c0c78be

--- a/templates/base.html
+++ b/templates/base.html
@@ -496,6 +496,7 @@ $(document).ready(function() {
       name: "{{user.google_display_name}}",
       // TODO: The current logged in user's email address.
       email: "{{user.email}}",
+      gid:"{{user.google_user_id}}",
       completed_tour: '{{user.completed_tour}}',
       oranization:'{{organization_name}}',
       // TODO: The current logged in user's sign-up date as a Unix timestamp.
